# ChangeLog for dev-perl/XML-Encoding
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Encoding/ChangeLog,v 1.20 2008/04/29 00:17:38 yuval Exp $

*XML-Encoding-2.01 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +XML-Encoding-2.01.ebuild:
  Version bump

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -XML-Encoding-1.01-r1.ebuild, XML-Encoding-1.01-r2.ebuild:
  Version bump, thanks seemant

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  XML-Encoding-1.01-r1.ebuild, XML-Encoding-1.01-r2.ebuild:
  Adding perl dep; fixed DEPEND

  02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  XML-Encoding-1.01-r2.ebuild:
  Stable on hppa

  05 Jul 2006; Christian Hartmann <ian@gentoo.org>
  XML-Encoding-1.01-r1.ebuild, XML-Encoding-1.01-r2.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header; fixed DEPEND

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  XML-Encoding-1.01-r2.ebuild:
  Keyworded ~hppa

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  XML-Encoding-1.01-r2.ebuild:
  Mark 1.01-r2 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  XML-Encoding-1.01-r2.ebuild:
  add ~ia64

  04 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  XML-Encoding-1.01-r1.ebuild, XML-Encoding-1.01-r2.ebuild:
  bug 76590

*XML-Encoding-1.01-r2 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*XML-Encoding-1.01-r1 (6 May 2002)

  1 Aug 2002; Calum Selkirk <cselkirk@gentoo.org> XML-Encoding-1.01-r1.ebuild :

  Added ppc to KEYWORDS.

  6 May 2002; Seemant Kulleen <seemant@gentoo.org>
  XML-Encoding-1.01-r1.ebuild files/digest-XML-Encoding-1.01-r1 :

  eclassed.

*XML-Encoding-1.01 (1 Feb 2002)
