@@ -1,0 +1,18 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Encoding/XML-Encoding-2.03.ebuild,v 1.1 2008/07/18 11:30:01 tove Exp $
+
+MODULE_AUTHOR=SHAY
+inherit perl-module
+
+DESCRIPTION="Perl Module that parses encoding map XML files"
+
+SLOT="0"
+LICENSE="|| ( Artistic GPL-2 )"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~sparc ~x86"
+IUSE=""
+
+DEPEND="dev-perl/XML-Parser
+	dev-lang/perl"
+
+SRC_TEST=do
