@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/XML-Encoding
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Encoding/ChangeLog,v 1.20 2008/04/29 00:17:38 yuval Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Encoding/ChangeLog,v 1.21 2008/07/18 11:30:01 tove Exp $
+
+*XML-Encoding-2.03 (18 Jul 2008)
+
+  18 Jul 2008; Torsten Veller <tove@gentoo.org> +XML-Encoding-2.03.ebuild:
+  Version bump
 
 *XML-Encoding-2.01 (29 Apr 2008)
 
